<resources>
    <string name="app_name">Perkasa Sales Force</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rupiah_0">Rp 0,00</string>
    <string name="nilai_0">0</string>
    <string name="jarak_0">0 Km</string>
    <string name="search">Search</string>
    <string name="no">No</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kalender">Kalender</string>
    <string name="cari">Cari</string>
    <string name="ccid">CCID</string>
    <string name="harga">Harga</string>
    <string name="jenis_transaksi">Jenis Transaksi</string>
    <string name="jenis_barang">Jenis Barang</string>
    <string name="total_ccid">Total CCID dan Harga</string>
    <string name="ccid_perdana">CCID Perdana</string>
    <string name="scan_ccid">SCAN CCID</string>
    <string name="rentang_ccid">TENTUKAN RENTANG CCID</string>
    <string name="list_ccid">AMBIL DARI LIST</string>
    <string name="pilih_input_ccid">Pilih metode input CCID</string>
    <string name="status_aktif">AKTIF</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="outlet">Outlet</string>
    <string name="kamera">Kamera</string>
    <string name="simpan">Simpan</string>
    <string name="sales">Sales</string>
    <string name="bank">Bank</string>
    <string name="email">Email</string>
    <string name="nomor_hp">Nomor Pemilik (HP Owner)</string>
    <string name="area">Area*</string>
    <string name="area_star">Area*</string>
    <string name="rekening">Rekening</string>
    <string name="contact_person">Contact Person</string>
    <string name="nominal">Nominal</string>
    <string name="proses">Proses</string>
    <string name="lanjutkan_survey">Lanjutkan Survey</string>
    <string name="jumlah">Jumlah</string>
    <string name="keterangan">Keterangan</string>
    <string name="bulk">BULK</string>
    <string name="total">Total</string>
    <string name="total_piutang">Total MKIOS &amp; Perdana</string>
    <string name="total_tcash">Total LinkAja Non RS</string>
    <string name="batal">Batal</string>
    <string name="kota">Kota</string>
    <string name="simpan_data_customer">Simpan Data Customer</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_star">Alamat*</string>
    <string name="warning_transaksi">*Transaksi yang pending/gagal/tempo tidak dihitung pada total</string>
    <string name="peta_outlet">Peta Outlet</string>
    <string name="kunjungan_sales">Kunjungan Sales</string>
    <string name="status_proses">SEDANG DIPROSES</string>
    <string name="nomor_ba">Nomor BA</string>
    <string name="nama_barang_surat_jalan">Nama Barang/Surat Jalan</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="nama_outlet_star">Nama Outlet*</string>
    <string name="untuk_tanggal">Untuk tanggal</string>
    <string name="null_value">-</string>
    <string name="akun">Akun</string>
    <string name="hapus">Hapus</string>
    <string name="status">Status</string>
    <string name="tanggal_tempo">Tanggal Tempo</string>
    <string name="kontak">Kontak</string>
    <string name="lokasi">Lokasi</string>
    <string name="sisa">Sisa</string>
    <string name="nota">Nota</string>
    <string name="terjual">Terjual</string>
    <string name="nomor_telepon">Nomor Telephone</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="edit_posisi">Edit Posisi</string>
    <string name="jumlah_piutang">Jumlah Pelunasan Piutang</string>
    <string name="checkin">Checkin</string>
    <string name="checkout">Checkout</string>
    <string name="jumlah_pembayaran">Jumlah Pembayaran</string>
    <string name="jumlah_pengajuan">Jumlah Penambahan Plafon</string>
    <string name="jumlah_stok">Jumlah Stok</string>
    <string name="nama_reseller">Nama Reseller</string>
    <string name="nama_sales">Nama Sales</string>
    <string name="surat_jalan">Surat Jalan</string>
    <string name="nomor_reseller_star">Nomor Reseller*</string>
    <string name="nomor_reseller">No Reseller</string>
    <string name="nama_outlet">Nama Outlet</string>
    <string name="terakhir_order">Terakhir Order</string>
    <string name="banyak_ccid">Banyak CCID</string>
    <string name="ccid_awal">CCID Awal</string>
    <string name="ambil_ccid">AMBIL CCID</string>
    <string name="kommplain">Komplain</string>
    <string name="ccid_akhir">CCID Akhir</string>
    <string name="nama_barang_ccid">Nama Barang Per CCID</string>
    <string name="harga_barang_ccid">Harga Per CCID</string>
    <string name="pulsa">Pulsa</string>
    <string name="komplain">Komplain</string>
    <string name="edit_lokasi">Tahan point untuk memindahkan/Tekan pada bagian map</string>
    <string name="posisi_user">Posisi anda dengan outlet adalah :</string>
    <string name="simpan_komplain">Simpan Komplain</string>
    <string name="title_activity_komplain">ActivityKomplain</string>
    <string name="title_activity_test">Map</string>
    <string name="foto_sebelum">Foto Sebelum</string>
    <string name="foto_sesudah">Foto Sesudah</string>
    <string name="keyword">Keyword</string>
    <string name="diajukan_oleh">Diajukan Oleh</string>
    <string name="setujui">Setujui</string>
    <string name="tolak">Tolak</string>

    <string name="accessibility_description">Layanan ini untuk mengakses balasan USSD</string>

</resources>
