<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOrderTcash3"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/keterangan"
        android:textSize="@dimen/text14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_harga" />

    <TextView
        android:id="@+id/txt_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42"
        tools:text="@string/rupiah_0" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/harga"
        android:textSize="@dimen/text14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nominal" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/nominal"
        android:textSize="@dimen/text14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/nama_pelanggan"
        android:textSize="@dimen/text14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <EditText
        android:id="@+id/txt_nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:background="@drawable/style_box_bordered_rounded"
        android:ems="10"
        android:inputType="number"
        android:padding="@dimen/padding5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <EditText
        android:id="@+id/txt_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/padding10"
        android:background="@drawable/style_box_bordered_rounded"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="@dimen/padding5"
        app:layout_constraintDimensionRatio="h,3:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/posisi_user"
        app:layout_constraintEnd_toStartOf="@+id/txt_jarak"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_keterangan" />

    <TextView
        android:id="@+id/txt_jarak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jarak_0"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text14"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="@+id/textView43" />

    <Button
        android:id="@+id/btn_peta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:layout_marginTop="@dimen/padding10"
        android:text="@string/peta_outlet"
        android:background="#cacaca"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/btn_proses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <Button
        android:id="@+id/btn_proses"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:background="@color/colorAccent"
        android:text="@string/proses"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@+id/btn_peta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_peta"
        app:layout_constraintTop_toTopOf="@+id/btn_peta" />
</android.support.constraint.ConstraintLayout>